Opportunities and Challenges of Cloud in Healthcare intro

--- a/references.bib
+++ b/references.bib
@@ -103,6 +103,26 @@
   Timestamp                = {2015.10.11}
 }
 
+@Article{cloudComputingIncrease,
+  Title                    = {Research Indicates Increase in Cloud Computing},
+  Author                   = {Patrick Avery},
+  Journal                  = {IT Business Edge},
+  Year                     = {2009},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
+@Article{bannermanCloud,
+  Title                    = {Cloud Computing Adoption Risks: State of Play},
+  Author                   = {Bannerman},
+  Journal                  = {Software Engineering Conference Cloud Workshop},
+  Year                     = {2010},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
 @Article{Basu2014,
   Title                    = {Overview of blood components and their preparation},
   Author                   = {Basu, Debdatta and Kulkarni, Rajendra},
@@ -131,6 +151,28 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.10}
+}
+
+@Article{Blumenthal2009,
+  Title                    = {Stimulating the Adoption of Health Information Technology},
+  Author                   = {Blumenthal, David},
+  Journal                  = {N Engl J Med},
+  Year                     = {2009},
+
+  Month                    = apr,
+  Number                   = {15},
+  Pages                    = {1477--1479},
+  Volume                   = {360},
+
+  __markedentry            = {[ilias:]},
+  Booktitle                = {New England Journal of Medicine},
+  Comment                  = {doi: 10.1056/NEJMp0901592},
+  Doi                      = {10.1056/NEJMp0901592},
+  ISSN                     = {0028-4793},
+  Owner                    = {ilias},
+  Publisher                = {Massachusetts Medical Society},
+  Timestamp                = {2015.10.12},
+  Url                      = {http://dx.doi.org/10.1056/NEJMp0901592}
 }
 
 @Article{Bolton-Maggs2013,
@@ -298,6 +340,16 @@
   Url                      = {http://dx.doi.org/10.1111/j.1537-2995.2010.02989.x}
 }
 
+@Article{danekCanadaCloud,
+  Title                    = {Cloud Computing and the Canadian Environment},
+  Author                   = {Danek},
+  Journal                  = {Public Works Government Services},
+  Year                     = {2009},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12}
+}
+
 @Article{TRF:TRF04402,
   Title                    = {Recruiting blood donors: challenges and opportunities},
   Author                   = {Davey, Richard J.},
@@ -357,6 +409,27 @@
   ISSN                     = {1423-0410},
   Publisher                = {Blackwell Publishing Ltd},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2002.tb05295.x}
+}
+
+@Article{Dudley2010,
+  Title                    = {Translational bioinformatics in the cloud: an affordable alternative},
+  Author                   = {Dudley, Joel T and Pouliot, Yannick and Chen, Rong and Morgan, Alexander A and Butte, Atul J},
+  Journal                  = {Genome Medicine},
+  Year                     = {2010},
+
+  Month                    = aug,
+  Number                   = {8},
+  Pages                    = {51--51},
+  Volume                   = {2},
+  Abstract                 = {With the continued exponential expansion of publicly available genomic data and access to low-cost, high-throughput molecular technologies for profiling patient populations, computational technologies and informatics are becoming vital considerations in genomic medicine. Although cloud computing technology is being heralded as a key enabling technology for the future of genomic research, available case studies are limited to applications in the domain of high-throughput sequence data analysis. The goal of this study was to evaluate the computational and economic characteristics of cloud computing in performing a large-scale data integration and analysis representative of research problems in genomic medicine. We find that the cloud-based analysis compares favorably in both performance and cost in comparison to a local computational cluster, suggesting that cloud computing technologies might be a viable resource for facilitating large-scale translational research in genomic medicine.},
+  Comment                  = {gm172[PII]
+20691073[pmid]
+20691073[pmid]},
+  ISSN                     = {1756-994X},
+  Owner                    = {ilias},
+  Publisher                = {BioMed Central},
+  Timestamp                = {2015.10.12},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2945008/}
 }
 
 @Electronic{diadikasiaAimodosias,
@@ -623,6 +696,28 @@ Timothy Grance},
   Timestamp                = {2015.10.08}
 }
 
+@Article{Kabachinski2011,
+  Title                    = {What's the Forecast for Cloud Computing in Healthcare?},
+  Author                   = {Kabachinski, Jeff},
+  Journal                  = {Biomedical Instrumentation \& Technology},
+  Year                     = {2011},
+
+  Month                    = mar,
+  Number                   = {2},
+  Pages                    = {146--150},
+  Volume                   = {45},
+
+  __markedentry            = {[ilias:6]},
+  Booktitle                = {Biomedical Instrumentation \& Technology},
+  Comment                  = {doi: 10.2345/0899-8205-45.2.146},
+  Doi                      = {10.2345/0899-8205-45.2.146},
+  ISSN                     = {0899-8205},
+  Owner                    = {ilias},
+  Publisher                = {Biomedical Instrumentation \& Technology},
+  Timestamp                = {2015.10.12},
+  Url                      = {http://dx.doi.org/10.2345/0899-8205-45.2.146}
+}
+
 @InProceedings{Kanagaraj2011,
   Title                    = {Proposal of an open-source Cloud computing system for exchanging medical images of a Hospital Information System},
   Author                   = {Kanagaraj, G. and Sumathi, A.C.},
@@ -630,8 +725,6 @@ Timothy Grance},
   Year                     = {2011},
   Month                    = {Dec},
   Pages                    = {144-149},
-
-  __markedentry            = {[revekka:6]},
   Doi                      = {10.1109/TISC.2011.6169102},
   Keywords                 = {biomedical equipment;cloud computing;data warehouses;health care;information management;medical image processing;medical information systems;patient care;public domain software;HIS;administrative information;branch hospital;centralized information system design;computational resource maintenance;data warehouse;electronically stored medical records;high-end processing;hospital information system;independent information system;information sharing;integrated computerized clinical information system;medical equipments;medical image exchange;medical terminal units;open-source cloud computing system;operational information;patient health care;small township hospital;statistical requirements;Biomedical imaging;Computed tomography;Fires;Medical services;Runtime;Servers;Cloud Computing;Electronic Medical Records;Hospital Information System},
   Owner                    = {revekka},
@@ -939,6 +1032,22 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
+}
+
+@Article{Schweitzer2012,
+  Title                    = {Reconciliation of the cloud computing model with US federal electronic health record regulations},
+  Author                   = {Schweitzer, Eugene J},
+  Journal                  = {Journal of the American Medical Informatics Association},
+  Year                     = {2012},
+
+  Month                    = mar,
+  Number                   = {2},
+  Pages                    = {161--165},
+  Volume                   = {19},
+  Abstract                 = {Cloud computing refers to subscription-based, fee-for-service utilization of computer hardware and software over the Internet. The model is gaining acceptance for business information technology (IT) applications because it allows capacity and functionality to increase on the fly without major investment in infrastructure, personnel or licensing fees. Large IT investments can be converted to a series of smaller operating expenses. Cloud architectures could potentially be superior to traditional electronic health record (EHR) designs in terms of economy, efficiency and utility. A central issue for EHR developers in the US is that these systems are constrained by federal regulatory legislation and oversight. These laws focus on security and privacy, which are well-recognized challenges for cloud computing systems in general. EHRs built with the cloud computing model can achieve acceptable privacy and security through business associate contracts with cloud providers that specify compliance requirements, performance metrics and liability sharing.},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12},
+  Url                      = {http://jamia.oxfordjournals.org/content/19/2/161.abstract}
 }
 
 @Book{androidHacks,
