--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -2,8 +2,33 @@
 \chapter{Τεχνολογίες}\label{ch:Development Stack}
 \section{Back-End}
 	\subsection{Cloud}
-	
+	\subsubsection{Ευκαιρίες και προκλήσεις στον τομέα υγείας}
+	Πρόσφατες έρευνες έδειξαν ότι το 75\% των διευθυντών πληροφοριακών συστημάτων ανέφεραν ότι θα χρειαστεί να χρησιμοποιήσουν τις τεχνολογίες του υπολογιστικού νέφους στο άμεσο μέλλον \cite{danekCanadaCloud}\cite{cloudComputingIncrease}. Στον τομέα υγείας πολλοί οργανισμοί, διευθυντές και ειδικοί του χώρου πιστεύουν ότι η τεχνολογία του υπολογιστικού νέφους μπορεί να βελτιώσει σημαντικά τις παρεχόμενες υπηρεσίες υγείας, ενώ παράλληλα να μειώσει αισθητά τα λειτουργικά κόστη\cite{Dudley2010}\cite{Schweitzer2012}\cite{Blumenthal2009}\cite{Kabachinski2011}. Επιπλέον μια αναφορά από τον Ευρωπαϊκό Οργανισμό για την Ασφάλεια Δικτύων και Πληροφοριών (ΕΝΙΣΑ) προβλέπει ότι ο νέος αυτός τεχνολογικός τομέας θα λάβει τεράστιες επενδύσεις στο χώρο της υγείας\cite{bannermanCloud}. 
 
+Παρακάτω στο \ref{tab:health_cloud_challenges_opportunities} βλέπουμε σε μορφή πίνακα μια σύνοψη των ευκαιριών αλλά και των προκλήσεων που παρουσιάζει η τεχνολογία του υπολογιστικού νέφους για το χώρο της υγείας.
+	
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|l| p{\dimexpr 0.45\linewidth-2\tabcolsep} | p{\dimexpr 0.45\linewidth-2\tabcolsep} |}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Τομέας} & \textbf{Ευκαιρείες} & \textbf{Προκλήσεις}
+	    \\ \hline    
+	    \multirow{3}{*}{Διοίκησης} & Χαμηλότερο κόστος υποδομών του IT & Έλειψη εμπιστοσύνης των προμηθευτών υγείας \\
+	    & Διάθεση υπολογιστικών πόρων on demand & Οργανωτική αδράνεια \\
+	    & Σταδιακή πληρωμή ανάλογως τις ανάγκες & Απώλεια άμέσου ελέγχου δεδομένων \\ \hline
+	    \multirow{3}{*}{Τεχνολογίας} & Μείωση εργασιών συντήρησης του ΙΤ & Προβλήματα εξάντλησης πόρων \\
+	    & Ευελξία και επεκτασιμότητα υποδομών IT & Απρόβλεπτη συμπεριφορά \\
+	    & Οικολογική λύση & Απώλεια άμέσου ελέγχου δεδομένων  \\ \hline
+	    \multirow{3}{*}{Ασφάλειας} & Περισσότεροι πόροι για προστασία δεδομένων & Κατάχρηση προνομίων \\
+	    & Αντιγραφή των δεδομένων σε πολλαπλές τοποθεσίες & Ασφάλεια των φυσικών αποθηκευτικών μέσων \\
+	    & Δυναμικά επεκτάσιμοι πόροι ασφάλεια που αυξάνει την ελαστικότητα & Προβλήματα διαχείρησης κλειδιών κρυπτογράφησης \\ \hline
+	    \end{tabular}
+	    \caption{Ευκαιρείες και Προκλήσεις cloud στον χώρο της υγείας}
+	    \label{tab:health_cloud_challenges_opportunities}
+	\end{center}
+\end{table}	
+	\subsubsection{Θεωρητικό υπόβαθρο υπολογιστικού νέφους}
 	To cloud computing (υπολογιστικό νέφος) όπως ορίζεται από το NIST (Εθνικό Ινστιτούτο Προτύπων και Τεχνολογίας)  είναι μια τεχνολογία, η οποία επιτρέπει την πρόσβαση από παντού, παρέχει μετά από αίτημα πρόσβαση στο δίκτυο για την κοινή χρήση προσαρμοστικών υπολογιστικών πόρων (π.χ., δίκτυα, servers, συστήματα αποθήκευσης, εφαρμογές και υπηρεσίες), μπορεί να ξεκινήσει και να αναπτυχθεί γρήγορα με ελάχιστη διαχείριση και χωρίς καμία αλληλεπίδραση με τον φορέα παροχής υπηρεσιών. \cite{cloudComputing} Το cloud computing παρέχει στους χρήστες και στις επιχειρήσεις διάφορες δυνατότητες για την αποθήκευση και την επεξεργασία των δεδομένων τους σε τρίτα κέντρα δεδομένων. \cite{Haghighat2015}
 	Το cloud computing ουσιαστικά στηρίζεται στην κατανομή των πόρων με στόχο την επίτευξη συνοχής και οικονομίας μέσω ενός δικτύου και την μεγιστοποίηση της απόδοσης τους. Οι πόροι του cloud δεν είναι μόνο διαμοιραζόμενοι από πολλούς χρήστες αλλά μπορούν και να ανακατανεμηθούν δυναμικά ανάλογα με την ζήτηση, γεγονός που μπορεί να χρησιμοποιηθεί όταν κατανέμονται στους διάφορους χρήστες.  Για παράδειγμα, μια cloud εγκατάσταση ηλεκτρονικών υπολογιστών οι οποία εξυπηρετεί Ευρωπαίους χρήστες στην διάρκεια των Ευρωπαϊκών εργάσιμων ωρών μπορεί να ανακατανείμει τους ίδιους πόρους για να εξυπηρετήσει χρήστες στην Βόρεια Αμερική κατά τις εργάσιμες ώρες της Βόρειας Αμερικής σε μία διαφορετική εφαρμογή. Αυτή η προσέγγιση βοηθά στην μεγιστοποίηση της χρήσης της υπολογιστικής ισχύος ενώ ταυτόχρονα μειώνεται το ολικό κόστος των φυσικών πόρων καθώς χρησιμοποιούμε λιγότερη ενέργεια, κλιματισμό κ.λ.π. για να διατηρείται το σύστημα.Με χρήση του cloud computing πολλοί χρήστες μπορούν να έχουν πρόσβαση σε έναν server και να ανακτούν και να ανανεώνουν τα δεδομένα τους χωρίς να αγοράζουν άδειες για όλες τις διαφορετικές εφαρμογές. 
 	Οι πάροχοι cloud συνήθως χρησιμοποιούν μοντέλο κοστολόγησης "πλήρωσε όσο χρησιμοποιήσεις".  Παρουσιάζει σπουδαιότητα λοιπόν το γεγονός ότι οι "πελάτες" μπορούν να εξοικονομήσουν χρηματικούς πόρους στο πέρασμα του χρόνου, καθώς χρησιμοποιώντας τους πόρους στο cloud, πληρώνουν μόνο για τους πόρους που χρησιμοποιούν και όχι για την αγορά και συντήρηση άφθονων μηχανημάτων (π.χ. εξυπηρετητών). Η λύση λοιπόν του cloud computing λοιπόν αποτελεί μία ιδιαίτερα ελκυστική προοπτική για τους χρήστες στους οποίους η χρήση των πόρων ποικίλλει σημαντικά καθώς και σε αυτούς στους οποίους  η αγορά μηχανημάτων και το κόστος συντήρησης τους αποτελούν σημαντικό τμήμα του προϋπολογισμού. 
