Stack technology -cloud -4

--- a/references.bib
+++ b/references.bib
@@ -421,6 +421,7 @@
   Number                   = {8},
   Pages                    = {51--51},
   Volume                   = {2},
+
   Abstract                 = {With the continued exponential expansion of publicly available genomic data and access to low-cost, high-throughput molecular technologies for profiling patient populations, computational technologies and informatics are becoming vital considerations in genomic medicine. Although cloud computing technology is being heralded as a key enabling technology for the future of genomic research, available case studies are limited to applications in the domain of high-throughput sequence data analysis. The goal of this study was to evaluate the computational and economic characteristics of cloud computing in performing a large-scale data integration and analysis representative of research problems in genomic medicine. We find that the cloud-based analysis compares favorably in both performance and cost in comparison to a local computational cluster, suggesting that cloud computing technologies might be a viable resource for facilitating large-scale translational research in genomic medicine.},
   Comment                  = {gm172[PII]
 20691073[pmid]
@@ -725,6 +726,7 @@ Timothy Grance},
   Year                     = {2011},
   Month                    = {Dec},
   Pages                    = {144-149},
+
   Doi                      = {10.1109/TISC.2011.6169102},
   Keywords                 = {biomedical equipment;cloud computing;data warehouses;health care;information management;medical image processing;medical information systems;patient care;public domain software;HIS;administrative information;branch hospital;centralized information system design;computational resource maintenance;data warehouse;electronically stored medical records;high-end processing;hospital information system;independent information system;information sharing;integrated computerized clinical information system;medical equipments;medical image exchange;medical terminal units;open-source cloud computing system;operational information;patient health care;small township hospital;statistical requirements;Biomedical imaging;Computed tomography;Fires;Medical services;Runtime;Servers;Cloud Computing;Electronic Medical Records;Hospital Information System},
   Owner                    = {revekka},
@@ -1044,6 +1046,7 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Number                   = {2},
   Pages                    = {161--165},
   Volume                   = {19},
+
   Abstract                 = {Cloud computing refers to subscription-based, fee-for-service utilization of computer hardware and software over the Internet. The model is gaining acceptance for business information technology (IT) applications because it allows capacity and functionality to increase on the fly without major investment in infrastructure, personnel or licensing fees. Large IT investments can be converted to a series of smaller operating expenses. Cloud architectures could potentially be superior to traditional electronic health record (EHR) designs in terms of economy, efficiency and utility. A central issue for EHR developers in the US is that these systems are constrained by federal regulatory legislation and oversight. These laws focus on security and privacy, which are well-recognized challenges for cloud computing systems in general. EHRs built with the cloud computing model can achieve acceptable privacy and security through business associate contracts with cloud providers that specify compliance requirements, performance metrics and liability sharing.},
   Owner                    = {ilias},
   Timestamp                = {2015.10.12},
@@ -1284,6 +1287,14 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.09}
+}
+
+@Electronic{characteristics,
+  Title                    = {Cloud Characteristics},
+  Url                      = {http://www.interoute.com/cloud-article/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Electronic{images,
