--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -61,8 +61,7 @@
 Το cloud computing μπορεί να διαχωριστεί με βάση τις υπηρεσίες που προσφέρει σε διάφορες κατηγορίες. Οι πιο βασικές, έιναι α) η υποδομή ως μία υπηρεσία (IaaaS), β) η πλατφόρμα ως μία υπηρεσία (PaaS) γ) το λογισμικό ως μία υπηρεσία (SaaS) και το δ) backend των κινητών σαν υπηρεσία(MBaaS), που είναι γνωστό σαν backend σαν υπηρεσία(BaaS).
 \\*
 		\subsubsection{IaaS}
-		\textbf{IaaS}
-\\*
+
 		Η υποδομή σαν υπηρεσία προσφέρει πρόσβαση σε υπολογιστικούς πόρους στο εικονικό περιβάλλον του cloud, σε εικονικό υλικό (hardware). Το εικονικό υλικό περιλαμβάνει εικονικό χώρο server, συνδέσεις δικτύου, εύρος ζώνης, διευθύνσεις IP  και εξισορροπιστές φορτίου. Το σύνολο των πόρων του υλικού προκύπτει από ένα πλήθος servers και δικτύων που είναι κατανεμημένοι συνήθως σε διάφορα κέντρα δεδομένων και ο πάροχος cloud είναι υπεύθυνος για την διατήρηση. Στον χρήστη δίνεται πρόσβαση στους πόρους αυτούς του cloud ώστε να μπορεί να χτίσει τις δικές του πλατφόρμες πληροφορικής. 
 		
 		Οι IaaS υπηρεσίες μπορούν σε συνδυασμό με άλλες υπηρεσίες του cloud να χρησιμοποιηθούν για την δημιουργία οικονομικά συμφέρουσων και εύκολα επεκτάσιμων λύσεων πληροφορικής, όπου οι δυσκολίες και τα έξοδα διαχείρισης έχουν ανατεθεί στον πάροχο cloud. Όταν οι δραστηριότητες του χρήστη κλιμακώνονται, και επιθυμεί μία επέκταση ή σμίκρυνση των υπολογιστικών πόρων, τότε μπορεί να αντλήσει ή να εγκαταλείψει πόρους cloud χωρίς να χρειάζεται να αγοραστεί, να εγκατασταθεί και να ενσωματωθεί νέο υλικό από τον ίδιο. 
@@ -78,8 +77,7 @@
 	\end{figure}
 		
 		\subsubsection{PaaS}
-	\textbf{PaaS}		
-		\\*
+	
 		Η πλατφόρμα σαν υπηρεσία παρέχει στους πελάτες του υπολογιστικού νέφους όλους τους πόρους και τα εργαλεία που απαιτούνται για να έχουν την δυνατότητα να αναπτύξουν, να διαχειριστούν και να τρέξουν εφαρμογές στο διαδίκτυο χωρίς την πολυπλοκότητα και την ανάγκη εγκατάστασης της υποδομής (λογισμικού) που συνήθως συνδέονται με την ανάπτυξη και την έναρξη μιας εφαρμογής. Οι πλατφόρμες σαν υπηρεσίες προσφέρονται σε δύο διαφορετικές μορφές: είτε σαν δημόσιες cloud υπηρεσίες από τον πάροχο στις οποίες  ο χρήστης  ελέγχει την ανάπτυξη του λογισμικού και τις ρυθμίσεις διαμόρφωσης καθώς ο πάροχος εξασφαλίζει το απαραίτητο υπόβαθρο που χρειάζεται η εφαρμογή, είτε σαν λογισμικό που εγκαθίσταται σε ιδιωτικά κέντρα δεδομένων ή δημόσια υποδομή ως υπηρεσία που διοικείται από εσωτερικά συστήματα πληροφορικής. 
 		
 		Στο μοντέλο PaaS ο χρήστης δεν ελέγχει την υποκείμενη cloud υποδομή, η οποία συμπεριλαμβάνει το δίκτυο, τους servers, το λειτουργικό σύστημα και τους αποθηκευτικούς χώρους αλλά έχει τον πλήρη έλεγχο στις εγκατεστημένες ή αναπτυγμένες εφαρμογές καθώς και στις ρυθμίσεις των παραμέτρων που γίνονται στο περιβάλλον. Το μοντέλο PaaS βασίζεται σε χρήση της HTML ή Javascript. Υπάρχουν διάφοροι τύποι του μοντέλου PaaS, δημόσιοι, ιδιωτικοί και υβριδικοί. Σε αυτού του τύπου το μοντέλο παροχής υπηρεσιών cloud απαιτούνται δύο επίπεδα προστασίας για την διασφάλιση της ασφάλειας της ιδιωτικής ζωής. Στο χαμηλότερο επίπεδο του συστήματος, ο πάροχος cloud μπορεί να παρέχει βασικούς μηχανισμούς ασφαλείας, όπως end-to-end κρυπτογράφηση, έλεγχο ταυτότητας και εξουσιοδότηση. Στο υψηλότερο επίπεδο, ο  χρήστης των υπηρεσιών cloud χρειάζεται να καθορίσει τις πολιτικές ελέγχου της πρόσβασης στην εφαρμογή.\cite{Kanagaraj2011}
@@ -94,8 +92,7 @@
 	\end{figure}
 
 		\subsubsection{SaaS}
-	\textbf{SaaS}	
-	\\*	
+	 
 	Το λογισμικό σαν υπηρεσία είναι ένα μοντέλο ανάπτυξης λογισμικού σύμφωνα με το οποίο παρέχονται κατόπιν ζήτησης στον χρήστη εφαρμογές και υπολογιστικοί πόροι. Ουσιαστικά, είναι όλες οι υπηρεσίες του cloud στις οποίες οι χρήστες είναι σε θέση να αποκτήσουν πρόσβαση σε εφαρμογές μέσω σύνδεσης στο Internet. Οι εφαρμογές αυτές βρίσκονται στο cloud και μπορούν να χρησιμοποιηθούν για ένα ευρύ φάσμα δραστηριοτήτων, τόσο από εταιρείες όσο και από άτομα. Η χρήση των εφαρμογών αυτών αποτελεί περισσότερο ενοικίαση λογισμικού παρά αγορά του. Με την παραδοσιακές εφαρμογές λογισμικού αρχικά αγοράζεται το λογισμικό ως πακέτο, εγκαθίσταται σε έναν υπολογιστή και συνήθως οι σχετικές άδειες περιορίζουν τον αριθμό των χρηστών και των συσκευών όπου μπορεί να αναπτυχθεί το λογισμικό. Εν αντιθέσει, οι χρήστες των υπηρεσιών SaaS εγγράφονται στο λογισμικό, χωρίς να το αγοράσουν, συνήθως σε μηνιαία βάση. 
 	
 	Οι περισσότεροι χρήστες χρησιμοποιούν έναν λεπτό πελάτη (thin client) για να αποκτήσουν πρόσβαση στις υπηρεσίες SaaS. Οι υπηρεσίες SaaS Οι εταιρικοί χρήστες χρησιμοποιούν τις εφαρμογές που παρέχει ο πάροχος cloud για ανάγκες όπως λογισμικό γραφείου, λογισμικό ανταλλαγής μηνυμάτων,  λογισμικό λογιστικής και τιμολόγησης, λογισμικό για παρακολούθηση των επιδόσεων, λογισμικό διαχείρισης των επιχειρησιακών σχέσεων και πολλά άλλα. 
@@ -110,8 +107,7 @@
 	\end{figure}
 	
 		\subsubsection{BaaS}
-\textbf{BaaS}
-\\*
+ 
 	
 	Η υπηρεσία BaaS είναι ένα μοντέλο που παρέχει στους προγραμματιστές διαδικτυακών εφαρμογών και εφαρμογών για κινητά τηλέφωνα έναν τρόπο για να συνδέουν τις εφαρμογές τους με τον χώρο αποθήκευσης για backend στο cloud και με τα APIs που χρησιμοποιούνται σε backend εφαρμογές.  Επιπλέον παρέχει υπηρεσίες όπως η διαχείριση χρηστών, ειδοποιήσεις (push notifications), κώδικα server και σύνδεση με υπηρεσίες κοινωνικών δικτύων.  Όλες αυτές οι υπηρεσίες παρέχονται μέσω της χρήσης εργαλείων ανάπτυξης λογισμικού (SDKs) και έχουν την δική τους διεπαφή προγραμματισμού εφαρμογών (APIs), που τους επιτρέπει να ενσωματωθούν στις εφαρμογές χωρίς ιδιαίτερο κόπο. Η παροχή ενός σταθερού τρόπου για την διαχείριση των backend δεδομένων συνεπάγεται το γεγονός ότι οι προγραμματιστές δεν χρειάζεται να αναπτύξουν κώδικα backend για κάθε υπηρεσία που η εφαρμογή τους χρησιμοποιεί ή έχει πρόσβαση.
 
@@ -124,11 +120,51 @@
 	    \label{fig:mvp_pattern}
 	\end{figure}
 
-	Μοντέλα ανάπτυξης
-		\subsubsection{Private cloud}
+	Στην συνέχεια θα αναπτυχθούν τα μοντέλα ανάπτυξης του cloud computing.
+	\subsubsection{Public cloud}
+	
+ 
+		Το δημόσιο cloud computing είναι ένα μοντέλο μέσω του οποίου οι χρήστες έχουν πρόσβαση στο cloud μέσω διεπαφών που χρησιμοποιούν τα προγράμματα περιήγησης. Ένα cloud καλείται δημόσιο, όταν οι υπηρεσίες του παρέχονται μέσω ενός δημόσιου δικτύου, όπως το διαδίκτυο και είναι ανοιχτές για δημόσια χρήση. Τα δημόσια cloud παρέχουν υπηρεσίες σε πολλούς πελάτες χρησιμοποιώντας την ίδια διαμοιραζόμενη υποδομή.Πολλά δημόσια clouds δεν χρεώνουν τον χρήστη.
+		 Οι υπηρεσίες SaaS όπως η αποθήκευση στο cloud και οι online εφαρμογές γραφείου είναι οι υπηρεσίες που βρίσκονται κατά κόρον σε δημόσια clouds. Οι υπηρεσίες υποδομής (IaaS) καθώς και οι πλατφόρμες σαν υπηρεσία (PaaS) , κυριώς οι περιπτώσεις του cloud web hosting και των περιβαλλόντων ανάπτυξης αναπτύσσονται εξίσου συχνά και σε δημόσια και σε ιδιωτικά clouds. Τα δημόσια clouds  χρησιμοποιούνται ευρέως σε προσφορές για ιδιώτες οι οποίοι είναι λιγότερο πιθανόν να χρειαστούν το επίπεδο των υποδομών και την ασφάλεια που προσφέρουν τα ιδιωτικά clouds. Ωστόσο, σε πολλές περιπτώσεις οι επιχειρήσεις μπορούν να χρησιμοποιούν δημόσια clouds σεπεριπτώσεις που δεν τίθεται θέμα ευαίσθητων δεδομένων (π.χ. webmai, online συνεργασία) για να κάνουν τις λειτουργίες τους πιο αποτελεσματικά.	\cite{characteristics}
+
+			Τα βασικά πλεονεκτήματα του δημόσιου cloud είναι:
+			\begin{itemize}
+
+			\item Απόλυτη επεκτασιμότητα. Το γεγονός ότι οι υπολογιστικοί πόροι στο cloud είναι "ανεξάντλητοι" και γίνονται διαθέσιμοι ανάλογα με τη ζήτηση έχει ως αποτέλεσμα οι εφαρμογές που τρέχουν σε αυτούς να μπορούν να ανταποκριθούν στις διακυμάνσεις της δραστηριότητας.
+			
+			\item Αποδοτικό. Τα δημόσια clouds συνεπάγονται υψηλότερα επίπεδα υπολογιστικών πόρων με ταυτόχρονα λιγότερο κόστος. Μερικές προτάσεις μαζική αγοράς μπορούν ακόμη και να είναι δωρεάν για τον πελάτη και να στηρίζονται στις διαφημίσεις για τα έσοδα τους (Google).
+			
+			\item Το μοντέλο πληρωμής ανάλογα με την χρήση. Ο χρήστης είναι σε θέση να αποκτήσει πρόσβαση στους πόρους που χρειάζεται, όποτε θέλει και να πληρώσει μόνο για αυτούς αποφεύγοντας τους περιττούς πόρους.
+
+			\item 	Ευελιξία. Υπάρχει ένας τεράστιος αριθμός των IaaS, PaaS και SaaS υπηρεσιών που διατίθενται στην αγορά, οι οποίες ακολουθούν το μοντέλο του δημόσιου cloud και τις οποίες ο χρήστης μπορεί να προσεγγίσει από οποιαδήποτε συσκευή με χρήση internet. Οι υπηρεσίες αυτές μπορούν να εκπληρώσουν τις περισσότερες υπολογιστικές απαιτήσεις και μπορούν να χρησιμοποιηθούν εξίσου αποτελεσματικά  από ιδιώτες και επιχειρήσεις. 
+			
+			\item Ανεξαρτησία της τοποθεσίας. Η διαθεσιμότητα των υπηρεσιών του δημόσιου cloud μέσα από το διαδίκτυο εξασφαλίζει ότι οι υπηρεσίες είναι διαθέσιμες όπου και αν βρίσκεται ο χρήστης. Αυτό το γεγονός πολλές φορές είναι ιδιαίτερα χρήσιμο όπως για παράδειγμα σε εταιρίες που δίνεται η δυνατότηα για απομακρυσμένη πρόσβαση σε υποδομές πληροφορικής (σε περίπτωση έκτακτης ανάγκης, κλπ).
+			
+		\end{itemize}
+			
+			
+	\subsubsection{Private cloud}
+
+	 
+	Το ιδιωτικό cloud, είναι ένα μοντέλο το οποίο λειτουργεί αποκλειστικά για έναν οργανισμό, διευθύνεται είτε από τον ίδιο τον οργανισμό είτε από τρίτους και εγκαθίσταται είτε εσωτερικά είτε εξωτερικά. Περιλαμβάνει ένα ξεχωριστό και ασφαλές περιβάλλον με το οποίο μπορούν να αλληλεπιδράσουν οι   χρήστες. Τα ιδιωτικά clouds παρέχουν μεγάλη υπολογιστική ισχύ σαν υπηρεσία χρησιμοποιώντας ένα σύνολο από φυσικούς υπολογιστικούς πόρους, οι οποίοι είναι προσβάσιμοι μόνο από έναν οργανισμό, εξασφαλίζοντας περισσότερο έλεγχο και αυξημένη ασφάλεια. Τα δημόσια clouds περιλαμβάνουν πολλούς πελάτες οι οποίοι έχουν πρόσβαση σε εικονικές υπηρεσίες που αντλούν πόρους από την ίδια ομάδα από servers μέσω δημοσίων δικτύων. Τα ιδιωτικά clouds από την άλλη πλευρά, περιλαμβάνουν την οριοθέτηση ενός cloud για την αποκλειστική χρήση ενός οργανισμού. Παρόλο που χρησιμοποιούνται ξεχωριστοί πόροι, μπορούν να γίνουν προσβάσιμοι μέσω ιδιωτικών γραμμών ή ασφαλών κρυπτογραφημένων συνδέσεων μέσω των δημόσιων δικτύων. 
+	Τα ιδιωτικά cloud είναι κατάλληλα για περιπτώσεις στις οποίες υπάρχει η ανάγκη αποθήκευσης και επεξεργασίας ιδιωτικών η ευαίσθητων δεδομένων ή η ανάγκη διεξαγωγής ευαίσθητων εργασιών. Για παράδειγμα, μία ιδιωτική cloud υπηρεσία μπορεί να χρησιμοποιηθεί από ένα πληροφοριακό σύστημα με που διαχειρίζεται και αποθηκεύει ευαίσθητα ιατρικά δεδομένα και θέλει να επωφεληθεί από τα πλεονεκτήματα του cloud computing στην επιχειρησιακή υποδομή του. 	Υιοθετεί τις βασικές αρχές ασφαλείας, νομοθεσίας και κανονιστικών απαιτήσεων αφού προσφέρει μεγάλο έλεγχο εγκατάστασης και χρήσης στην επιχείρηση που το χρησιμοποιεί.Το ιδιωτικό μοντέλο cloud μοιάζει  αρκετά με το μοντέλο των  δικτύων τοπικής πρόσβασης (LAN) που χρησιμοποιούταν στο παρελθόν αλλά παρέχει τα επιπλέον πλεονεκτήματα του cloud. Κάποια από τα πλεονεκτήματα του ιδιωτικού cloud είναι:
+	
+	\begin{itemize}
+	
+	\item Μεγαλύτερη προστασία και ασφάλεια. Τα δημόσια clouds εφαρμόζουν μηχανισμούς παροχής ασφάλειας, αλλά τα ιδιωτικά clouds με τους αποκλειστικούς φυσικούς πόρους που επιτρέπουν πρόσβαση μόνο σε συνδέσεις που γίνονται μέσω συγκεκριμένου οργανισμού και προσωπικές ασφαλείς γραμμές εξασφαλίζουν ότι υπάρχει πλήρης ασφάλεια και αξιοπιστία.
+	
+	\item Περισσότερο έλεγχο με αποτέλεσμα περισσότερη ευελιξία. Εφόσον η πρόσβαση στους πόρους γίνεται μόνο από έναν οργανισμό, αυτός ο οργανισμός έχει την ικανότητα να ρυθμίσει και να διαχειριστεί το cloud όπως επιθυμεί ώστε να επιτευχθεί το κατάλληλο δίκτυο. 
+	
+	\item Βελτίωση  της σχέσης κόστους και ενεργειακής απόδοσης. Η εφαρμογή ενός ιδιωτικού μοντέλου cloud μπορεί να συντελέσει στην καλύτερη κατανομή των πόρων σε έναν οργανισμό, εξασφαλίζοντας ότι η διαθεσιμότητα των πόρων ανταποκρίνεται άμεσα και ευέλικτα ανάλογα με την ζήτηση τους. Παρόλο που είναι πιο ακριβά σε σχέση με τα δημόσια clouds, κάνουν πιο αποτελεσματική χρήση των υπολογιστικών πόρων σε σχέση με τα παραδοσιακά τοπικά δίκτυα (LANs), καθώς ελαχιστοποιείται η επένδυση σε αχρησιμοποίητη παραγωγική ικανότητα. 
+	
+	\item Βελτιωμένη αξιοπιστία. Ακόμα και αν οι πόροι (servers, δίκτυα, κ.λ.π.) φιλοξενούνται εσωτερικά στον πελάτη, η δημιουργία εικονικών περιβάλλοντων λειτουργικού συνεπάγεται ότι το δίκτυο είναι πιο ανθεκτικό σε επιμέρους αστοχίες από ότι η φυσική υποδομή. 
+
+	\end{itemize}
+	
+		
 		\subsubsection{Community cloud}
-		\subsubsection{Public cloud}
 		\subsubsection{Hybrid cloud}
+		
 		\subsubsection{NodeJs}
 		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
 	\subsection{Βάση Δεδομένων}
