Fix cloud duplicate figure labels

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -73,7 +73,7 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{IaaS.jpg}
 	    \caption{ Υπηρεσίες IaaS cloud computing.  }
-	    \label{fig:mvp_pattern}
+	    \label{fig:iaas}
 	\end{figure}
 		
 		\subsubsection{PaaS}
@@ -88,7 +88,7 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{PaaS.jpg}
 	    \caption{Υπηρεσίες PaaS cloud computing.  }
-	    \label{fig:mvp_pattern}
+	    \label{fig:paas}
 	\end{figure}
 
 		\subsubsection{SaaS}
@@ -103,7 +103,7 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{SaaS.jpg}
 	    \caption{Υπηρεσίες SaaS cloud computing.}
-	    \label{fig:mvp_pattern}
+	    \label{fig:saas}
 	\end{figure}
 	
 		\subsubsection{BaaS}
@@ -117,7 +117,7 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{BaaS.png}
 	    \caption{Υπηρεσίες BaaS cloud computing. }
-	    \label{fig:mvp_pattern}
+	    \label{fig:baas}
 	\end{figure}
 
 	Στην συνέχεια θα αναπτυχθούν τα μοντέλα ανάπτυξης του cloud computing.
